--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "lib-flexible": "^0.3.2",
+    "stylus": "^0.54.5",
+    "swiper": "^3.4.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -36,7 +40,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.7",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -81,9 +85,11 @@
     "shelljs": "^0.7.6",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.8.0",
+    "style-loader": "^0.19.1",
+    "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.0",
