--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "stylus": "^0.54.5",
     "swiper": "^3.4.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "bootstrap": "3.3.7"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
