完成新闻详情

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "fecha": "^2.3.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "lib-flexible": "^0.3.2",
